# sfml_template

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: Macros.cmake  SFMLConfigDependencies.cmake.in
examples/: CMakeLists.txt
examples/sound_stage/: CMakeLists.txt  SoundStage.cpp  imgui-SFML.cpp  imgui_stdlib.cpp
include/SFML/Audio/: InputSoundFile.hpp  Listener.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundFileReader.hpp  SoundFileWriter.hpp  SoundSource.hpp  SoundStream.hpp
include/SFML/Graphics/: RenderStates.hpp  RenderTarget.hpp  Sprite.hpp  StencilMode.hpp  Text.hpp
src/SFML/: CMakeLists.txt
src/SFML/Audio/: AudioDevice.hpp  AudioResource.cpp  CMakeLists.txt  Music.cpp  Sound.cpp  SoundBuffer.cpp  SoundBufferRecorder.cpp  SoundFileReaderFlac.cpp  SoundFileReaderMp3.cpp  SoundFileReaderOgg.cpp  SoundFileReaderWav.cpp  SoundFileWriterFlac.cpp  SoundFileWriterOgg.cpp  SoundFileWriterWav.cpp  SoundRecorder.cpp  SoundSource.cpp  SoundStream.cpp
src/SFML/Graphics/: CMakeLists.txt  Image.cpp  ImageLoader.cpp  RenderStates.cpp  RenderTarget.cpp  Shape.cpp  Sprite.cpp  StencilMode.cpp  Text.cpp  View.cpp
src/SFML/Main/: SFMLActivity.cpp
src/SFML/Window/: Context.cpp
test/: CMakeLists.txt
test/Graphics/: RectangleShape.test.cpp  RenderStates.test.cpp  Shape.test.cpp  StencilMode.test.cpp  Text.test.cpp
test/TestUtilities/: GraphicsUtil.cpp  GraphicsUtil.hpp
test/Window/: Context.test.cpp  Mouse.test.cpp
